--- a/SGPB.Web/SGPB.Web.csproj
+++ b/SGPB.Web/SGPB.Web.csproj
@@ -9,6 +9,7 @@
                 <PackageReference Include="Azure.Storage.Blobs" Version="12.12.0" />
                 <PackageReference Include="Azure.Storage.Files.Shares" Version="12.10.0" />
                 <PackageReference Include="Azure.Storage.Queues" Version="12.10.0" />
+                <PackageReference Include="MailKit" Version="3.2.0" />
                 <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
                 <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.5" />
                 <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.5" />
@@ -20,7 +21,8 @@
                 </PackageReference>
                 <PackageReference Include="Microsoft.Extensions.Azure" Version="1.2.0" />
                 <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
-                <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+                <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+                <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
                 <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
         </ItemGroup> 
 </Project>
